fix/tasklist_scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -46,7 +46,7 @@ h3 {
 }
 
 h4 {
-  font-size: 28px;
+  font-size: 26px;
 }
 
 h5 {
@@ -61,24 +61,23 @@ p {
   font-size: 16px;
 }
 
- /* width */
- ::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 6px;
-}
+} */
 
 /* Track */
-::-webkit-scrollbar-track {
+/* ::-webkit-scrollbar-track {
   background: #d2d2d2;
   border-radius: 6px;
-}
+} */
 
 /* Handle */
-::-webkit-scrollbar-thumb {
-  background: #eb770f;
-  border-radius: 6px;
-}
+/* ::-webkit-scrollbar-thumb {
+  /* background: #eb770f; */
+/* border-radius: 6px;
+} */
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+/* Handle on hover  */
+/* ::-webkit-scrollbar-thumb:hover {
   background: #d2d2d2;
-}
+} */
